@@ -6,6 +6,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #8217: Race condition when creating new accounts
  * #10681: User with empty password can't reset their password
  * #10740: Checkbox columns are too wide on the Accounts: Cleanup page
+ * #10765: AttributeError: 'NoneType' object has no attribute 'strip'
  * prevent two ways for a user to bypass a forced password change
  * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel
  * keep trac.auth.LoginModule options defined after disabling that component
